zerocopy-derive/tests/ui-nightly/cfgs/on_error.stderr
error: `on_error` is experimental; pass '--cfg zerocopy_derive_on_error' to enable
  --> tests/ui-nightly/cfgs/on_error.rs:15:12
   |
15 | #[zerocopy(on_error = "skip")]
   |            ^^^^^^^^
